Fix hero buttons and datepicker text alignment, fix content alignment on split mode on desktop, rename blocks

--- a/src/scss/_components/_button.scss
+++ b/src/scss/_components/_button.scss
@@ -101,6 +101,6 @@
   vertical-align: top;
 
   @include media-up(xs) {
-    --btn-wrapper-display: inline-block;
+    --btn-wrapper-display: inline-flex;
   }
 }
